--- a/clients/node/client-transcribe-streaming-node/package.json
+++ b/clients/node/client-transcribe-streaming-node/package.json
@@ -1,31 +1,72 @@
 {
-  "name": "transcribe",
-  "description": "transcribe client",
-  "version": "0.0.1",
+  "name": "@aws-sdk/client-transcribe-streaming-node",
+  "description": "Node SDK for AWS Transcribe Streaming",
+  "version": "0.1.0-preview.3",
   "scripts": {
     "clean": "npm run remove-definitions && npm run remove-maps && npm run remove-js",
     "build-documentation": "npm run clean && typedoc ./",
     "prepublishOnly": "tsc",
     "pretest": "tsc",
-    "remove-definitions": "rimraf *.d.ts && rimraf ./commands/*.d.ts && rimraf ./types/*.d.ts",
+    "remove-definitions": "rimraf *.d.ts && rimraf ./commands/*.d.ts && rimraf ./model/*.d.ts rimraf ./types/*.d.ts && rimraf ./protocol/*.d.ts",
     "remove-documentation": "rimraf ./docs",
-    "remove-js": "rimraf *.js && rimraf ./commands/*.js && rimraf ./shared/*.js && rimraf ./types/*.js",
-    "remove-maps": "rimraf *.js.map && rimraf ./commands/*.js.map && rimraf ./shared/*.js.map && rimraf ./types/*.js.map",
+    "remove-js": "rimraf *.js && rimraf ./commands/*.js && rimraf ./model/*.js && rimraf ./types/*.js && rimraf ./protocol/*.js",
+    "remove-maps": "rimraf *.js.map && rimraf ./commands/*.js.map && rimraf ./model/*.js.map && rimraf ./types/*.js.map && rimraf ./protocol/*.js.map",
     "test": "exit 0",
-    "smoke-test": "karma start karma.conf"
+    "smoke-test": "npm run pretest && node ./test/smoke/index.spec.js",
+    "build:es": "tsc -p tsconfig.es.json",
+    "build": "yarn pretest && yarn build:es"
   },
-  "main": "./index.js",
-  "types": "./index.d.ts",
+  "main": "./dist/cjs/index.js",
+  "types": "./types/index.d.ts",
+  "author": {
+    "name": "AWS SDK for JavaScript Team",
+    "url": "https://aws.amazon.com/javascript/"
+  },
+  "module": "./dist/es/index.js",
+  "browser": {
+    "./runtimeConfig": "./runtimeConfig.browser"
+  },
+  "sideEffects": false,
+  "license": "Apache-2.0",
   "dependencies": {
-    "tslib": "^1.10.0",
+    "@aws-sdk/smithy-client": "^0.1.0-preview.1",
+    "@aws-sdk/protocol-http": "^0.1.0-preview.1",
+    "@aws-crypto/sha256-browser": "^0.1.0-preview.1",
+    "@aws-sdk/config-resolver": "^0.1.0-preview.5",
+    "@aws-sdk/credential-provider-node": "^0.1.0-preview.7",
+    "@aws-sdk/fetch-http-handler": "^0.1.0-preview.5",
+    "@aws-sdk/hash-node": "^0.1.0-preview.5",
+    "@aws-sdk/invalid-dependency": "^0.1.0-preview.1",
+    "@aws-sdk/middleware-content-length": "^0.1.0-preview.5",
+    "@aws-sdk/middleware-serde": "^0.1.0-preview.1",
+    "@aws-sdk/middleware-user-agent": "^0.1.0-preview.1",
+    "@aws-sdk/middleware-stack": "^0.1.0-preview.6",
+    "@aws-sdk/node-http-handler": "^0.1.0-preview.6",
+    "@aws-sdk/protocol-rest-json": "^0.1.0-preview.5",
+    "@aws-sdk/region-provider": "^0.1.0-preview.5",
+    "@aws-sdk/retry-middleware": "^0.1.0-preview.5",
+    "@aws-sdk/signature-v4": "^0.1.0-preview.7",
+    "@aws-sdk/signing-middleware": "^0.1.0-preview.7",
+    "@aws-sdk/stream-collector-node": "^0.1.0-preview.6",
+    "@aws-sdk/stream-collector-browser": "^0.1.0-preview.5",
     "@aws-sdk/types": "^0.1.0-preview.5",
-    "big.js": "^5.2.2"
+    "@aws-sdk/url-parser-browser": "^0.1.0-preview.5",
+    "@aws-sdk/url-parser-node": "^0.1.0-preview.5",
+    "@aws-sdk/util-base64-browser": "^0.1.0-preview.3",
+    "@aws-sdk/util-base64-node": "^0.1.0-preview.3",
+    "@aws-sdk/util-body-length-browser": "^0.1.0-preview.3",
+    "@aws-sdk/util-body-length-node": "^0.1.0-preview.4",
+    "@aws-sdk/util-user-agent-browser": "^0.1.0-preview.6",
+    "@aws-sdk/util-user-agent-node": "^0.1.0-preview.6",
+    "@aws-sdk/util-utf8-browser": "^0.1.0-preview.3",
+    "@aws-sdk/util-utf8-node": "^0.1.0-preview.3",
+    "tslib": "^1.8.0"
   },
   "devDependencies": {
-    "rimraf": "^3.0.0",
-    "typedoc": "^0.15.0",
-    "typescript": "^3.6.3",
-    "@types/big.js": "^4.0.5"
-  },
-  "license": "Apache-2.0"
+    "@aws-sdk/client-documentation-generator": "^0.1.0-preview.3",
+    "@types/node": "^10.0.0",
+    "rimraf": "^2.6.2",
+    "typedoc": "^0.14.2",
+    "typescript": "^3.7.0-dev.20190926"
+  }
 }
